feat: added all frech method armotization