@@ -1,14 +1,16 @@
 package com.upc.ven_con_plata_backend.iam.infrastructure.authorization.sfs.model;
 
-import com.upc.ven_con_plata_backend.iam.domain.model.aggregates.User;
+
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
+import com.upc.ven_con_plata_backend.iam.domain.model.aggregates.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 @Getter
 @EqualsAndHashCode
@@ -23,23 +25,31 @@ public class UserDetailsImpl implements UserDetails {
     private final boolean enabled;
     private final Collection<? extends GrantedAuthority> authorities;
 
-    public UserDetailsImpl(String username, String password,
-                           Collection<? extends GrantedAuthority> authorities) {
+    public UserDetailsImpl(String username, String password, Collection<? extends GrantedAuthority> authorities) {
         this.username = username;
         this.password = password;
+        this.authorities = authorities;
         this.accountNonExpired = true;
         this.accountNonLocked = true;
         this.credentialsNonExpired = true;
         this.enabled = true;
-        this.authorities = authorities;
     }
 
+    /**
+     * This method is responsible for building the UserDetailsImpl object from the User object.
+     * @param user The user object.
+     * @return The UserDetailsImpl object.
+     */
     public static UserDetailsImpl build(User user) {
         var authorities = user.getRoles().stream()
                 .map(role -> role.getName().name())
                 .map(SimpleGrantedAuthority::new)
-                .toList();
-        return new UserDetailsImpl(user.getUsername(), user.getPassword(), authorities);
+                .collect(Collectors.toList());
+        return new UserDetailsImpl(
+                user.getUsername(),
+                user.getPassword(),
+                authorities);
     }
 
 }
+
